@@ -8,7 +8,9 @@ import java.awt.image.*;
 import javax.imageio.*;
 import javax.imageio.stream.*;
 import java.io.*;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
+import java.util.Base64;
 
 import robombs.game.*;
 import robombs.clientserver.*;
@@ -53,25 +55,25 @@ public class TalkBack {
 		}
 		
 		final Image img=fb.getOutputBuffer();
-		
-		new Thread() {
-			public void run() {
-				try {
-					noTalkBack();
-					URL url=new URL("http://jpct.de/talkback/store.php");
-					HttpURLConnection conn = (HttpURLConnection)url.openConnection();
-					
-					conn.setDoOutput(true);
-					conn.setDoInput(true);
-					conn.setUseCaches(false);
-					conn.setRequestMethod("POST");
-					
-					OutputStream out=conn.getOutputStream();
-					OutputStreamWriter wr = new OutputStreamWriter(out);
-		
+
+		// Use a virtual thread: this is a one-shot, I/O-bound HTTP call.
+		Thread.ofVirtual().start(() -> {
+			try {
+				noTalkBack();
+				URL url=new URL("http://jpct.de/talkback/store.php");
+				HttpURLConnection conn = (HttpURLConnection)url.openConnection();
+				
+				conn.setDoOutput(true);
+				conn.setDoInput(true);
+				conn.setUseCaches(false);
+				conn.setRequestMethod("POST");
+				
+				try (OutputStream out=conn.getOutputStream();
+				     OutputStreamWriter wr = new OutputStreamWriter(out, StandardCharsets.UTF_8)) {
+
 					Iterator<ImageWriter> itty = ImageIO.getImageWritersBySuffix("jpg");
 					if (itty.hasNext()) {
-				        ImageWriter iw = (ImageWriter) itty.next();
+				        ImageWriter iw = itty.next();
 				        
 				        ByteArrayOutputStream bos=new ByteArrayOutputStream();
 				        
@@ -79,12 +81,13 @@ public class TalkBack {
 				        iwp.setCompressionMode(ImageWriteParam.MODE_EXPLICIT);
 				        iwp.setCompressionQuality(0.85f); 
 				        
-				        ImageOutputStream ios = ImageIO.createImageOutputStream(bos);
-				        iw.setOutput(ios);
-				        iw.write(null,new IIOImage((RenderedImage) img,null,null),iwp);
-				        ios.close();
-					
-				        sun.misc.BASE64Encoder benc=new sun.misc.BASE64Encoder();
+				        try (ImageOutputStream ios = ImageIO.createImageOutputStream(bos)) {
+				            iw.setOutput(ios);
+				            iw.write(null, new IIOImage((RenderedImage) img, null, null), iwp);
+				        }
+
+				        // Use java.util.Base64 (replaces removed sun.misc.BASE64Encoder)
+				        String encoded = Base64.getEncoder().encodeToString(bos.toByteArray());
 				        
 				        String id=System.currentTimeMillis()+"_"+(int)(Math.random()*100000);
 				        
@@ -94,59 +97,46 @@ public class TalkBack {
 				        wr.write("&aa="+fb.getSamplingMode());
 				        wr.write("&version="+Globals.GAME_VERSION);
 				        wr.write("&jpct="+Config.getVersion());
-				        wr.write("&java="+URLEncoder.encode(System.getProperty("java.version"), "UTF-8"));
-				        wr.write("&vm="+URLEncoder.encode(System.getProperty("java.vm.name"), "UTF-8"));
-				        wr.write("&vendor="+URLEncoder.encode(System.getProperty("java.vm.vendor"), "UTF-8"));
-				        wr.write("&arch="+URLEncoder.encode(System.getProperty("os.arch"), "UTF-8"));
-				        wr.write("&os="+URLEncoder.encode(System.getProperty("os.name"), "UTF-8"));
-				        wr.write("&osversion="+URLEncoder.encode(System.getProperty("os.version"), "UTF-8"));
-				        wr.write("&adapter="+URLEncoder.encode(Globals.graphicsAdapter, "UTF-8"));
-				        wr.write("&shadows="+URLEncoder.encode(Globals.shadowMode, "UTF-8"));
+				        wr.write("&java="+URLEncoder.encode(System.getProperty("java.version"), StandardCharsets.UTF_8));
+				        wr.write("&vm="+URLEncoder.encode(System.getProperty("java.vm.name"), StandardCharsets.UTF_8));
+				        wr.write("&vendor="+URLEncoder.encode(System.getProperty("java.vm.vendor"), StandardCharsets.UTF_8));
+				        wr.write("&arch="+URLEncoder.encode(System.getProperty("os.arch"), StandardCharsets.UTF_8));
+				        wr.write("&os="+URLEncoder.encode(System.getProperty("os.name"), StandardCharsets.UTF_8));
+				        wr.write("&osversion="+URLEncoder.encode(System.getProperty("os.version"), StandardCharsets.UTF_8));
+				        wr.write("&adapter="+URLEncoder.encode(Globals.graphicsAdapter, StandardCharsets.UTF_8));
+				        wr.write("&shadows="+URLEncoder.encode(Globals.shadowMode, StandardCharsets.UTF_8));
 				        wr.write("&cpus="+Runtime.getRuntime().availableProcessors());
 				        
 				        wr.write("&pic=");
-				        ByteArrayOutputStream sbo=new ByteArrayOutputStream();
-				        
-				        benc.encodeBuffer(new ByteArrayInputStream(bos.toByteArray()), sbo);
-				        
-				        wr.write(URLEncoder.encode(new String(sbo.toByteArray(), "UTF-8"), "UTF-8"));
+				        wr.write(URLEncoder.encode(encoded, StandardCharsets.UTF_8));
 				        wr.flush();
-				        wr.close();
-				        out.flush();
-				        out.close();
-				        
-				         char[] buffy=new char[1000];
-				         StringBuffer html=new StringBuffer();
-	
-				         InputStream in=conn.getInputStream();
-				         InputStreamReader reader=new InputStreamReader(in);
-	
-				         int len=0;
-	
-				         do {
-				            len=reader.read(buffy, 0, buffy.length);
-				            if (len!=-1) {
-				               html.append(buffy, 0, len);
-				            }
-				         } while (len!=-1);
+					}
+			        
+			        char[] buffy=new char[1000];
+			        StringBuilder html=new StringBuilder();
 
-				         reader.close();
-				         in.close();
+			        try (InputStream in=conn.getInputStream();
+			             InputStreamReader reader=new InputStreamReader(in, StandardCharsets.UTF_8)) {
+			            int len;
+			            do {
+			               len=reader.read(buffy, 0, buffy.length);
+			               if (len!=-1) {
+			                  html.append(buffy, 0, len);
+			               }
+			            } while (len!=-1);
+			        }
 				        String res=html.toString();
 				        if (res.startsWith("ok/")) {
-				         NetLogger.log("Talkback data transfered!");
+				            NetLogger.log("Talkback data transfered!");
 				        } else {
 				        	NetLogger.log("Talkback data not transfered!");
 				        	System.err.println(res);
 				        }
-					}
-					
-					out.close();
-				} catch (Exception e) {
-					NetLogger.log("Talkback data not transfered!");
-					e.printStackTrace();
 				}
-			}													
-		}.start();
+			} catch (Exception e) {
+				NetLogger.log("Talkback data not transfered!");
+				e.printStackTrace();
+			}
+		});
 	}
 }
